
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint16_t ;
struct bwn_mac {int dummy; } ;



__attribute__((used)) static void bwn_nphy_rf_ctl_override_rev19(struct bwn_mac *mac, uint16_t field,
        uint16_t value, uint8_t core, bool off,
        uint8_t override_id)
{

}
